# rust_rest_api

./: Cargo.toml  README.md
src/: main.rs  rest_gemini_client.rs
