[package]
name = "rust_rest_api"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bevy = "0.15.1"
bevy-inspector-egui = "0.28.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.31"